# SQL-query-solver

./: CMakeLists.txt  DBRelationsReader.cpp  DBRelationsReader.h  Hashtable.cpp  Hashtable.h  JobScheduler.cpp  JobScheduler.h  List.cpp  List.h  Perm.cpp  Perm.h  QueryEditor.cpp  QueryEditor.h  QueryList.cpp  QueryList.h  QuickSort.cpp  QuickSort.h  README.md  ResultsFileWithNotCorrectlyExecutedQueriesMarked  Types.h  UtilQE.cpp  UtilQE.h  Utilities.cpp  Utilities.h  main.cpp
small/: small.init  small.work
